assets/css/main.css
/* General */
@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap');

:root {
    --background-color-dark: #121524;
    --background-color-light: #ebeef2;
    --text-color-dark: #e4ae00;
    --text-color-light: #494b49;
}

html,
body {
    font-family: 'Fira Code', sans-serif;
    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    box-sizing: border-box;
    margin: 0 auto;
    min-width: 750px;
    max-width: 905px;
    height: 100%;
}

body {
    display: flex;
    padding: 0 64px;
    flex-direction: column;
}

@media (max-width: 768px) {
    html,
    body {
        width: 100%;
        min-width: 0;
        padding: 0 16px;
    }
}

* {
    box-sizing: border-box;
}

a {
    text-decoration: none;
}

h1 {
    margin: 0;
}

/* Layout */
header h1 {
    font-size: 3.3rem;
    font-weight: 300;
    line-height: 1em;
}

header h2 {
    font-size: 1.5rem;
    font-weight: 300;
    margin: 0;
}

header h3 {
    font-size: 1.25rem;
    font-weight: 300;
    margin: 0;
}

.profile {
    display: flex;
    row-gap: 1.5rem;
    column-gap: 1.5rem;
    align-items: center;
    margin-top: 84px;
}

/* Icons */
.icon {
    height: 100%;
    display: inline-block;
    background-size: contain;
    background-repeat: no-repeat;
}

.icon.github {
    background-image: url(../images/icons/github.svg);
}

.icon.linkedin {
    background-image: url(../images/icons/linkedin.svg);
}

.icon.location {
    background-image: url(../images/icons/location.svg);
}

.icon.email {
    padding: 2px;
    background-image: url(../images/icons/email.svg);
}

.icon.interactive {
    transition: filter 0.3s;
}

.theme.dark .icon.interactive:hover {
    filter: brightness(2);
}

.theme.light .icon.interactive:hover {
    filter: brightness(0.5);
}

.icon.medium {
    min-width: 28px;
    max-width: 28px;
    min-height: 28px;
    max-height: 28px;
}

/* Themes */
.theme.dark {
    color: var(--text-color-dark);
    background-color: var(--background-color-dark);
}

.theme.light {
    color: var(--text-color-light);
    background-color: var(--background-color-light);
}

.theme.light .tabs {
    border: 1px solid var(--text-color-light);
}

.theme.dark .tabs {
    border: 1px solid var(--text-color-dark);
}

/* Tabs */
.tab-navigator {
    overflow-x: hidden;
}

.tab-navigator [type="radio"] {
    display: none;
}

.tabs {
    padding: 0;
    display: flex;
    overflow: auto;
    list-style: none;
    border-radius: 6px;
    align-items: stretch;
}

.tab {
    flex: 1;
    border: 0;
    font-size: 1.5em;
    text-align: center;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    transition: background-color 0.3s ease, color 0.3s ease;
}

.theme.dark .tab:hover {
    background-color: #e4af001c;
}

.theme.light .tab:hover {
    background-color: #494b491c;
}

.tab {
    display: block;
    cursor: pointer;
    padding: 4px 20px;
}

.tab:not(:first-child) {
    border-left-width: 2px;
    border-left-style: solid;
}

.tab:not(:last-child) {
    border-bottom-width: 0;
    border-bottom-style: solid;
}

.theme.dark .tab:not(:first-child) {
    border-left-color: var(--text-color-dark);
    border-bottom-color: var(--text-color-dark);
}

.theme.light .tab:not(:first-child) {
    border-left-color: var(--text-color-light);
    border-bottom-color: var(--text-color-light);
}

.tab:first-child>label {
    border-radius: 6px 0 0 6px;
}

.tab:last-child>label {
    border-radius: 0 6px 6px 0;
}

.tab-content {
    padding: 12px;
    display: none;
    border-radius: 6px;
}

.theme.dark .tab-content {
    border: 1px solid var(--text-color-dark);
}

.theme.light .tab-content {
    border: 1px solid var(--text-color-light);
}

.theme.dark .tab-navigator .tab[data-active] {
    background: var(--text-color-dark);
    color: var(--background-color-dark);
}

.theme.light .tab-navigator .tab[data-active] {
    background: var(--text-color-light);
    color: var(--background-color-light);
}

/* Formatting */
.flex {
    display: flex;
}

.flex.row-center-y {
    align-items: center;
}

.flex.col-gap-1 {
    column-gap: 0.25rem;
}

.flex.col-gap-2 {
    column-gap: 1.5rem;
}

.flex.column {
    flex-direction: column;
}

.flex.row-gap-1 {
    row-gap: 0.8rem;
}

.avatar {
    border-radius: 50%;
    width: 125px;
    height: 125px;
}

@media screen and (max-width: 1024px) {
    .profile {
        flex-direction: column;
        text-align: center;
    }

    .profile .profile-location {
        row-gap: 0.25rem;
        align-self: center;
        align-items: center;
        flex-direction: column;
    }

    .profile .profile-location span {
        display: block;
    }

    .tabs {
        flex-direction: column;
    }

    .tab:first-child>label {
        border-radius: 0;
    }

    .tab:not(:first-child) {
        border-left: 0;
    }

    .tab:not(:last-child) {
        border-bottom-width: 1px;
    }

    .tab:last-child>label {
        border-radius: 0;
    }
}

article p.quote {
    margin-top: 8px;
    font-style: italic;
    font-size: 1.45em;
}

@media (max-width: 768px) {
    article p.quote {
        font-size: 1.25em;
    }
}

@media (max-width: 300px) {
    .tab {
        text-align: left;
    }
}

main {
    flex: 1;
}

main section {
    display: none;
}

main section[data-active] {
    display: flex;
    flex-direction: column;
    row-gap: 16px;
}

main section article {
    padding: 16px;
    border-radius: 6px;
    border-width: 1px;
    border-style: solid;
}

main section article .technologies {
    display: flex;
    column-gap: 8px;
    padding-top: 4px;
    flex-wrap: wrap;
    row-gap: 8px;
}

main section article .technologies span {
    border-width: 1px;
    border-style: solid;
    border-radius: 6px;
    padding: 4px 8px;
}

.theme.light main section article,
.theme.light main section article .technologies span {
    border-color: var(--text-color-light);
}

.theme.light hr {
    color: var(--text-color-light);
    border-color: var(--text-color-light);
}

.theme.dark hr {
    color: var(--text-color-dark);
    border-color: var(--text-color-dark);
}

.theme.dark main section article,
.theme.dark main section article .technologies span {
    border-color: var(--text-color-dark);
}

footer {
    padding: 16px 0;
    text-align: center;
}

/* Theme switcher */
.theme-switcher {
    right: 0;
    margin: 32px;
    width: 36px;
    height: 36px;
    border: 0;
    cursor: pointer;
    position: absolute;
    background-size: contain;
    background-repeat: no-repeat;
    background-color: transparent;
}

.theme-switcher:hover {
    animation: sway 2s infinite alternate ease-in-out;
}

.theme.dark .theme-switcher {
    background-image: url(../images/icons/theme-dark.svg);
}

.theme.light .theme-switcher {
    background-image: url('../images/icons/theme-light.svg');
}

@keyframes sway {
    from {
        transform: rotate(0deg)
    }

    50% {
        transform: rotate(15deg);
    }

    to {
        transform: rotate(0deg)
    }
}

section>p {
    margin-top: 0;
    margin-bottom: 0;
}

a.link {
    border-radius: 5px;
    padding-left: 4px;
    padding-right: 4px;
    display: inline-block;
    transition: background-color 0.3s ease;
}

/* Links */
a.link.bordered {
    border-bottom-width: 5px;
    border-bottom-style: solid;
}

.theme.light a.link {
    color: var(--text-color-light);
}

.theme.dark a.link {
    color: var(--text-color-dark);
}

.theme.light a.link.bordered {
    border-bottom-color: #494b494d;
}

.theme.dark a.link.bordered {
    border-bottom-color: #e4af007f;
}

.theme.light a.link:hover {
    background-color: #494b494d;
}

.theme.dark a.link:hover {
    background-color: #e4af007f;
}

p.info {
    margin-bottom: 0;
}

